Added Course Contents Handling

--- a/App.config
+++ b/App.config
@@ -4,5 +4,8 @@
 		<add name="pAcademyDBstring"
 			 connectionString="Server=MY2NDGF;Database=pacademy;Trusted_Connection=True;TrustServerCertificate=True;"
 			 providerName="System.Data.SqlClient" />
+		<add name="pAcademyCourses"
+			 connectionString="Server=MY2NDGF;Database=courses;Trusted_Connection=True;TrustServerCertificate=True;"
+			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
