Authentication was added, Homepage Tiles Half configured

--- a/App.config
+++ b/App.config
@@ -7,5 +7,7 @@
 		<add name="pAcademyCourses"
 			 connectionString="Server=MY2NDGF;Database=courses;Trusted_Connection=True;TrustServerCertificate=True;"
 			 providerName="System.Data.SqlClient" />
+		<add name="ApiBaseUrl"
+			 connectionString="http://127.0.0.1:5000"/>
 	</connectionStrings>
 </configuration>
